[package]
name = "c2-mmap-gpio"
version = "0.1.0"
authors = ["Marcin Grzywaczewski <killavus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
thiserror = "1.0"
nix = "0.18"
derive-try-from-primitive = "1.0"
byteorder = "1.3"