[package]
name = "c2-mmap-gpio"
version = "0.1.2"
authors = ["Marcin Grzywaczewski <killavus@gmail.com>"]
edition = "2018"
description="ODROID-C2 bindings for GPIO using memory-mapping"
license="Apache-2.0"
repository="https://github.com/Killavus/c2-mmap-gpio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
thiserror = "1.0"
nix = "0.19"
derive-try-from-primitive = "1.0"
byteorder = "1.3"
embedded-hal = "0.2.4"